# nbdev_2026

./: README.md  core.html  core.html.md  index.html  pyproject.toml  robots.txt  search.json  sitemap.xml
nbdev_2026/: _modidx.py  core.py
nbs/: 00_core.ipynb  index.ipynb  nbdev.yml
